--- a/blog-template.html
+++ b/blog-template.html
@@ -6,21 +6,31 @@
 <ul>
 <li><a href ='#'> Menu</a></li>
 <li><a href ='#'> About me</a></li>
-<li><a href ='#'> Projects</a></li>
+<li><a href ='#'> Projects Archive</a></li>
 <li><a href ='#'> Contact info</a></li>
-<li><a href ='#'> Blog history</a></li>
+<li><a href ='#'> Blog Library </a></li>
 </ul>
 <hr>
 <article>
-  <h1>Blog title</h1>
+  <h1>Blog Title</h1>
   <h2>by me on this date</h2>
   <p>
 bloggage
   </p>
 </article>
 <hr>
-<footer>Name, Email, NYC</footer>
+<footer>Frankie Pangilinan, frankie.diamond@gmail.com, San Francisco CA</footer>
 </body>
 <!--
-commentts
+How was it to wireframe and create an HTML page with a pair?
+It was okay... I had a hard time convincing myself that it was a necessary thing to pair on. In fact it almost made parring difficult solely on the premise that the exercise didn't feel like something that was meant to be pared on. HTML was fine, it was a little tedious and sometimes it was easy to get distracted at moments though.
+
+Did you find wireframing to be helpful to your development process?
+Yes i did. It allowed me to play and visualize with my ideas.
+
+What did you and your pair decide made a good wireframe?
+That was truly talked about during are session, although we did talk about elements of each others wireframes that we liked. Eg: The menu bar.
+
+What new semantic elements did you learn about (if any)?
+<footer></footer> and <article></article>. footer is useful and can contain meta data(? not quite sure if i understand this properly will work on it though.) and article is used to span things like blogs.
 -->
