Add boddy and text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,25 @@
+<!DOCTYPE html>
 <html>
-  <body>
-      Hello DBC!
-  </body>
+<title>Home Page</title>
+<body>
+<header>Name</header>
+<hr>
+<ul>
+<li><a href ='#'> Menu</a></li>
+<li><a href ='#'> About me</a></li>
+<li><a href ='#'> Projects Archive</a></li>
+<li><a href ='#'> Contact info</a></li>
+<li><a href ='#'> Blog Library </a></li>
+</ul>
+<hr>
+<article>
+  <h1>Blog Title</h1>
+  <h2>by me on this date</h2>
+  <p>
+bloggage
+  </p>
+</article>
+<hr>
+<footer>Frankie Pangilinan, frankie.diamond@gmail.com, San Francisco CA</footer>
+</body>
 </html>
