--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
-<html>
-<title>Home Page</title>
+<title>Tile goes here.</title>
 <body>
-<header>Name</header>
+<header>The little things</header>
 <hr>
 <ul>
-<li><a href ='#'> Menu</a></li>
-<li><a href ='#'> About me</a></li>
+<li><a href ='#'> Main</a></li>
+<li><a href ='#'> More About Me</a></li>
 <li><a href ='#'> Projects Archive</a></li>
+<li><a href ='blog/blog-index'> Blog Library </a></li>
 <li><a href ='#'> Contact info</a></li>
-<li><a href ='#'> Blog Library </a></li>
 </ul>
 <hr>
-<article>
-  <h1>Blog Title</h1>
-  <h2>by me on this date</h2>
+  <h1>The Little Things</h1>
+
+  <h2>A small box leaves little room for things. Although it is a lot easier to get out of it.
+</h2>
+
+  <h3>Mission</h3>
+  <p>To use my passion for logic and elegance to create meaningful web applications.</p>
+
+  <article>
+  <h4>A Short Story</h4>
   <p>
-bloggage
+  The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
+  <blockquote>"The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." -The Dancing Bees
+  </blockquote>
+  It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule. At the risk of sounding preachy. It brings logic to life.
   </p>
-</article>
+  </article>
+  <h3>Mission</h3>
+  <p>To use my passion for logic and elegance to create meaningful web applications.</p>
+
 <hr>
 <footer>Frankie Pangilinan, frankie.diamond@gmail.com, San Francisco CA</footer>
 </body>
-</html>
+<!--  >
