--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <title>Tile goes here.</title>
 <body>
 <header>The little things</header>
@@ -22,16 +23,18 @@
   <article>
   <h4>A Short Story</h4>
   <p>
-  The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
+    The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
+  </p>
   <blockquote>"The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." -The Dancing Bees
   </blockquote>
-  It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule. At the risk of sounding preachy. It brings logic to life.
+  <p>
+    It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule. At the risk of sounding preachy. It brings logic to life.
   </p>
-  </article>
+</article>
   <h3>Mission</h3>
   <p>To use my passion for logic and elegance to create meaningful web applications.</p>
 
 <hr>
-<footer>Frankie Pangilinan, frankie.diamond@gmail.com, San Francisco CA</footer>
+<footer>Frankie Pangilinan,<a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> ,frankie.diamond@gmail.com, San Francisco CA</footer>
 </body>
-<!--  >
+</html>
