--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <header>The little things</header>
 <hr>
 <ul>
-<li><a href ='#'> Main</a></li>
+<li><a href ='http://frankiebee.github.io/'> Main</a></li>
 <li><a href ='#'> More About Me</a></li>
 <li><a href ='#'> Projects Archive</a></li>
 <li><a href ='blog/blog-index'> Blog Library </a></li>
