--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <li><a href ='http://frankiebee.github.io/'> Main</a></li>
 <li><a href ='#'> More About Me</a></li>
 <li><a href ='#'> Projects Archive</a></li>
-<li><a href ='blog/blog-index.html'> Blog Library </a></li>
+<li><a href ='http://frankiebee.github.io/blog/blog-index.html'> Blog Library </a></li>
 <li><a href ='#'> Contact info</a></li>
 </ul>
 <hr>
