Rounding up and Commit all

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Tile goes here.</title>
+<title>The Main Event</title>
 <body>
 <header>The little things</header>
 <hr>
