--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>The Main Event</title>
+
+</head>
 <body>
 <header>The little things</header>
 <hr>
@@ -12,6 +15,9 @@
 <li><a href ='#'> Contact info</a></li>
 </ul>
 <hr>
+
+<!--<img src = 'img/sidebar-img.png'>LEFT column img
+<img src = 'img/sidebar-img-right.png'>RIGHT column img -->
   <h1>The Little Things</h1>
 
   <h2>A small box leaves little room for things. Although it is a lot easier to get out of it.
