--- a/index.html
+++ b/index.html
@@ -3,46 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>The Main Event</title>
-
+  <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
 </head>
 <body>
-  <header>The little things</header>
-  <hr>
-  <ul>
-    <li><a href ='http://frankiebee.github.io/'> Main</a></li>
-    <li><a href ='#'> More About Me</a></li>
-    <li><a href ='#'> Projects Archive</a></li>
-    <li><a href ='http://frankiebee.github.io/blog/blog-index.html'> Blog Library </a></li>
-    <li><a href ='#'> Contact info</a></li>
-  </ul>
-  <hr>
-
-<!--<img src = 'img/sidebar-img.png'>LEFT column img
-<img src = 'img/sidebar-img-right.png'>RIGHT column img -->
-  <h1>The Little Things</h1>
-
-  <h2>A small box leaves little room for things. Although it is a lot easier to get out of it.
-  </h2>
-
-  <h3>Mission</h3>
-    <p>To use my passion for logic and elegance to create meaningful web applications.</p>
-
+  <header>Frankie's little Things</header>
+  <nav>
+    <ul>
+      <table>
+        <tr>
+          <td><li><a href ='http://frankiebee.github.io/'> Main</a></li></td>
+          <td><li><a href ='#'> More About Me</a></li></td>
+          <td><li><a href ='#'> Projects Archive</a></li></td>
+          <td><li><a href ='http://frankiebee.github.io/blog/blog-index.html'> Blog Library </a></li></td>
+          <td><li><a href ='#'> Contact info</a></li></td>
+        </tr>
+      </table>
+    </ul>
+  </nav>
+<body>
+<!--<img src = 'img/sidebar-img.png' id = 'sleft'>LEFT column img
+<img src = 'img/sidebar-img-right.png' id = 'sright'>RIGHT column img -->
   <article>
-  <h4>A Short Story</h4>
-    <p>
-      The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
-    </p>
-    <blockquote>
-      "The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." -The Dancing Bees
-    </blockquote>
+    <h1>The Little Things</h1>
+
+    <h3 >Mission</h3>
+      <p>To use my passion for logic and elegance to create meaningful web applications.</p>
+
+    <h4>A Short Story</h4>
       <p>
-        It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule. At the risk of sounding preachy. It brings logic to life.
+        The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
+      </p>
+      <blockquote class = "box">
+        "The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." -The Dancing Bees
+      </blockquote>
+      <p>
+        It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule.
       </p>
   </article>
-  <h3>Mission</h3>
-    <p>To use my passion for logic and elegance to create meaningful web applications.</p>
 
-<hr>
-<footer>Frankie Pangilinan,<a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> ,frankie.diamond@gmail.com, San Francisco CA</footer>
+
+<footer>
+  <ul>
+    <li>Frankie Pangilinan</li>
+    <li><a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> </li>
+    <li>frankie.diamond@gmail.com, </li>
+    <li>San Francisco CA</li>
+  </ul>
+  </footer>
+
 </body>
 </html>
