--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       <table>
         <tr>
           <td><li><a href ='http://frankiebee.github.io/'> Main</a></li></td>
-          <td><li><a href ='#'> More About Me</a></li></td>
-          <td><li><a href ='#'> Projects Archive</a></li></td>
+          <td><li><a href ='http://frankiebee.github.io/other/about_me.html'> More About Me</a></li></td>
+          <td><li><a href ='http://frankiebee.github.io//other/projects.html'> Projects Archive</a></li></td>
           <td><li><a href ='http://frankiebee.github.io/blog/blog-index.html'> Blog Library </a></li></td>
-          <td><li><a href ='#'> Contact info</a></li></td>
+          <td><li><a href ='http://frankiebee.github.io//other/contact.html'> Contact info</a></li></td>
         </tr>
       </table>
     </ul>
