--- a/other/contact.html
+++ b/other/contact.html
@@ -29,7 +29,7 @@
 
 
 
-<footer class = "overwrite">
+<footer class = "overwrite1">
   <ul>
     <li>Frankie Pangilinan</li>
     <li><a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> </li>
