--- a/other/projects.html
+++ b/other/projects.html
@@ -27,7 +27,7 @@
     <h1>The Little Things</h1>
 
 
-<footer class = "overwrite"1>
+<footer class = "overwrite1">
   <ul>
     <li>Frankie Pangilinan</li>
     <li><a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> </li>
