Edit html add logos to file

--- a/other/projects.html
+++ b/other/projects.html
@@ -24,7 +24,8 @@
 <!--<img src = 'img/sidebar-img.png' id = 'sleft'>LEFT column img
 <img src = 'img/sidebar-img-right.png' id = 'sright'>RIGHT column img -->
   <article>
-    <h1>The Little Things</h1>
+    <h1>This Page is under construction</h1>
+
 
 
 <footer class = "overwrite1">
