Add img and css for footer

--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 
 <footer>
   <ul>
-    <li>Frankie Pangilinan</li>
-    <li><a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> </li>
-    <li>frankie.diamond@gmail.com, </li>
-    <li>San Francisco CA</li>
+    <table>
+      <tr><li><td class = "f-alighn">Frankie Pangilinan</td></li>
+      <li><td class = "f-alighn"><a href = "https://www.facebook.com/frankie.pangilinan.9"><img src="img/FB-f-Logo__blue_29.png"></a> </td></li>
+      <li><td class = "f-alighn">frankie.diamond@gmail.com, </td></li>
+      <li><td class = "f-alighn">San Francisco CA</td ></li></tr>
+    </table>
   </ul>
 </footer>
 
