Update the footer

--- a/blog-template.html
+++ b/blog-template.html
@@ -32,6 +32,15 @@
   <p>To use my passion for logic and elegance to create meaningful web applications.</p>
 
 <hr>
-<footer>Frankie Pangilinan, frankie.diamond@gmail.com, San Francisco CA</footer>
+<footer>
+  <ul>
+    <table>
+      <tr><li><td class = "f-alighn">Frankie Pangilinan</td></li>
+      <li><td class = "f-alighn"><a href = "https://www.facebook.com/frankie.pangilinan.9"><img src="img/FB-f-Logo__blue_29.png"></a> </td></li>
+      <li><td class = "f-alighn">frankie.diamond@gmail.com, </td></li>
+      <li><td class = "f-alighn">San Francisco CA</td ></li></tr>
+    </table>
+  </ul>
+</footer>
 </body>
 <!--  >
