Add contact info and play with css

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
       </p>
       <blockquote class = "box">
-        "The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." -The Dancing Bees
+        "The bees, with their hexagonal cells, have in fact discovered the best and most economical plan conceivable." The Dancing Bees
       </blockquote>
       <p>
         It is explained that the shape allows for no waste of space. There for it would take less building material and less time then if the pattern was made of circles. It also is perfectly shaped to receive the eggs from the queen. I digress, and although simple this pattern serves purpose and is not just an art-full forum of housing but has structure and rule.
@@ -44,12 +44,21 @@
 
 
 <footer>
+
   <ul>
     <table>
-      <tr><li><td class = "f-alighn">Frankie Pangilinan</td></li>
-      <li><td class = "f-alighn"><a href = "https://www.facebook.com/frankie.pangilinan.9"><img src="img/FB-f-Logo__blue_29.png"></a> </td></li>
-      <li><td class = "f-alighn">frankie.diamond@gmail.com, </td></li>
-      <li><td class = "f-alighn">San Francisco CA</td ></li></tr>
+
+      <tr>
+        <li class = "f-alighn"><td class = "subtext"> Find me on:</td></li>
+        <li class = "f-alighn"><td><a = href = "https://github.com/frankiebee"> <img src="img/github-mark.png"></a></td></li>
+        <li class = "f-alighn"><td><a href = "https://www.facebook.com/frankie.pangilinan.9"><img src="img/FB-f-Logo__blue_29.png"></a> </td></li>
+        <li><td class = "subtex">
+        <a href="https://www.linkedin.com/pub/frankie-pangilinan/10b/956/b30">
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Frankie Pangilinan's profile on LinkedIn">
+        </a>
+        </td></li>
+        <li class = "f-alighn"><td class = "subtext">You can also send me a<a href = "mailto:frankie.diamond@gmail.com"> EMAIL</a> </td></li>
+      </tr>
     </table>
   </ul>
 </footer>
