--- a/other/projects.html
+++ b/other/projects.html
@@ -27,12 +27,23 @@
 
 
 
-<footer class = "overwrite1">
+ <footer>
+
   <ul>
-    <li>Frankie Pangilinan</li>
-    <li><a href = "https://www.facebook.com/frankie.pangilinan.9">facebook</a> </li>
-    <li>frankie.diamond@gmail.com, </li>
-    <li>San Francisco CA</li>
+    <table>
+
+      <tr>
+        <li class = "f-alighn"><td class = "subtext"> Find me on:</td></li>
+        <li class = "f-alighn"><td><a = href = "https://github.com/frankiebee"> <img src="../img/github-mark.png"></a></td></li>
+        <li class = "f-alighn"><td><a href = "https://www.facebook.com/frankie.pangilinan.9"><img src="../img/FB-f-Logo__blue_29.png"></a> </td></li>
+        <li><td class = "subtex">
+        <a href="https://www.linkedin.com/pub/frankie-pangilinan/10b/956/b30">
+          <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Frankie Pangilinan's profile on LinkedIn">
+        </a>
+        </td></li>
+        <li class = "f-alighn"><td class = "subtext">You can also send me a<a href = "mailto:frankie.diamond@gmail.com"> EMAIL</a> </td></li>
+      </tr>
+    </table>
   </ul>
 </footer>
 
