Add file content

--- a/other/about_me.html
+++ b/other/about_me.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>The Main Event</title>
   <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/blogstylesheet.css">
 </head>
 <body>
   <header>Frankie's little Things</header>
@@ -19,11 +20,22 @@
       </table>
     </ul>
   </nav>
-<body>
   <article>
     <h1>The Little Things</h1>
+    <h2>A Little about me</h2>
+    <!--
+    Where you are from
+    Your interests/hobbies
+    Educational Experiences
+    Something quirky about you (This is a DBC tradition).
+    -->
 
+    <div class = "empty-box">
+    <p>
 
+    </p>
+    </div>
+  </article>
  <footer>
 
   <ul>
