--- a/other/about_me.html
+++ b/other/about_me.html
@@ -32,7 +32,12 @@
 
     <div class = "empty-box">
     <p>
-
+      <ul>
+      <li>I am from San Jose California and live in San Fransisco.</li>
+      <li>I like long walks on the beach :D</li>
+      <li>I have study honey bees for 16 years now and worked for one of the top 3 labs in the world that studies honeybee genome.</li>
+      <li>I eat raw cow meat. I think I'm addicted to it, if i don't satisfy the craving I turn into a monster.</li>
+    </ul>
     </p>
     </div>
   </article>
