--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>The Main Event</title>
         <link rel="stylesheet" type="text/css" href="stylesheets/default.css">
+        <link rel="stylesheet" type="text/css" href="stylesheets/blogstylesheet.css">
     </head>
 
     <body>
