Add cheatsheet link

--- a/other/projects.html
+++ b/other/projects.html
@@ -22,8 +22,10 @@
 <body>
 <!--<img src = 'img/sidebar-img.png' id = 'sleft'>LEFT column img
 <img src = 'img/sidebar-img-right.png' id = 'sright'>RIGHT column img -->
-  <article>
-    <h1>This Page is under construction</h1>
+  <article class="empty-box">
+  <ul>
+    <li><a href="../cheat-sheet.html"></a> Cheat sheet?</li>
+  </ul>
 
 
 </article>
