--- a/other/projects.html
+++ b/other/projects.html
@@ -24,7 +24,7 @@
 <img src = 'img/sidebar-img-right.png' id = 'sright'>RIGHT column img -->
   <article class="empty-box">
   <ul>
-    <li><a href="../cheat-sheet.html"></a> Cheat sheet?</li>
+    <li><a href="http://frankiebee.github.io//cheat-sheet.html">Cheat sheet?</a> </li>
   </ul>
 
 
