--- a/other/projects.html
+++ b/other/projects.html
@@ -19,12 +19,12 @@
       </table>
     </ul>
   </nav>
-<body>
+<body class="empty-box">
 <!--<img src = 'img/sidebar-img.png' id = 'sleft'>LEFT column img
 <img src = 'img/sidebar-img-right.png' id = 'sright'>RIGHT column img -->
-  <article class="empty-box">
+  <article>
   <ul>
-    <li><a href="http://frankiebee.github.io//cheat-sheet.html">Cheat sheet?</a> </li>
+    <li class="left"><a href="http://frankiebee.github.io//cheat-sheet.html">Cheat sheet?</a> </li>
   </ul>
 
 
