--- a/other/projects.html
+++ b/other/projects.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>The Main Event</title>
   <link rel="stylesheet" type="text/css" href="../stylesheets/default.css">
+  <link rel="stylesheet" type="text/css" href="../stylesheets/blogstylesheet.css">
+
 </head>
 <body>
   <header>Frankie's little Things</header>
