--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <ul>
                 <table>
                     <tr>
-                        <td><li><a href ='http://frankiebee.github.io/'> Main</a></li></td>
-                        <td><li><a href ='http://frankiebee.github.io/other/about_me.html'> More About Me</a></li></td>
-                        <td><li><a href ='http://frankiebee.github.io//other/projects.html'> Projects Archive</a></li></td>
+                        <td><li><a href ='http://frankiebee.github.io/'>&#11042 Main </a></li></td>
+                        <td><li><a href ='http://frankiebee.github.io/other/about_me.html'> More About Me </a></li></td>
+                        <td><li><a href ='http://frankiebee.github.io//other/projects.html'> Projects Archive </a></li></td>
                         <td><li><a href ='http://frankiebee.github.io/blog/blog-index.html'> Blog Library </a></li></td>
                     </tr>
                 </table>
@@ -24,9 +24,9 @@
         <article>
             <h1>The Little Things</h1>
 
-            <h3 >Mission</h3>
+            <h2>Mission</h2>
                 <p>To use my passion for logic and elegance to create meaningful web applications.</p>
-            <h4>A Short Story</h4>
+            <h3>A Short Story</h3>
             <p>
                 The six sided shape that makes the honeycomb pattern that we all know so well is more then just a pattern. As Karl Von Frisch (The God Father of honey bee science and research) puts it;
             </p>
@@ -49,7 +49,7 @@
                       <img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_profile_bluetxt_80x15.png" width="80" height="15" border="0" alt="View Frankie Pangilinan's profile on LinkedIn">
                     </a>
                     </td></li>
-                    <li class = "f-alighn"><td class = "subtext">You can also send me a<a href = "mailto:frankie.diamond@gmail.com"> EMAIL</a> </td></li>
+                    <li class = "f-alighn"><td class = "subtext"><center>You can also send me a</center><a href = "mailto:frankie.diamond@gmail.com"> EMAIL</a> </td></li>
                 </tr>
                 </ul>
             </table>
