--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>~</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="/index.css">
+  <script type="text/javascript" src="/bundle.js"></script>
 </head>
 <body>
-
+  <div id="main"></div>
 </body>
 </html>
