--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>~</title>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Vollkorn" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/index.css">
   <script type="text/javascript" src="/bundle.js"></script>
 </head>
